<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp">

        <LinearLayout
            android:layout_marginTop="64dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tanya_aku_tentang_ir_soekarno"
                android:textColor="@android:color/white"
                android:textSize="28sp" />


            <EditText
                android:id="@+id/edt_input"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/edittext"
                android:hint="@string/tulis_pertanyaan"
                android:paddingHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/btn_tanya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button"
                android:text="@string/tanyakan"
                android:textAlignment="center"
                android:paddingVertical="16dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="144dp"
                android:layout_height="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/handle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jawaban"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tipe_jawaban"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_answer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/kata_kunci"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_key_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/kalimat_terkait"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_result_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
